login screen style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,31 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.loginfield {
+  color: white;
+  border: 3px solid white;
+  border-radius: 15px;
+  font-family: inherit;
+  background: transparent;
+  padding: 5px;
+  margin: 5px;
+  outline: none;
+  font-size: 20px;
+}
+
+.loginButton {
+  background: white;
+  width: 226px;
+  font-family: inherit;
+  border-radius: 15px;
+  margin: 5px;
+  padding: 5px;
+  border: none;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.loginButton:hover {
+  opacity: 0.9;
+}
