--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,9 +28,7 @@ a {
   font-size: 20px;
 }
 
-.loginButton {
-  background: white;
-  width: 226px;
+.button {
   font-family: inherit;
   border-radius: 15px;
   margin: 5px;
@@ -38,6 +36,11 @@ a {
   border: none;
   font-weight: 600;
   font-size: 20px;
+}
+
+.loginButton {
+  background: white;
+  width: 226px;
 }
 
 .loginButton:hover {
